--- a/src/Intrefaces/Postulante/MenuInicial.form
+++ b/src/Intrefaces/Postulante/MenuInicial.form
@@ -301,7 +301,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="04072020SanJuan"/>
+                <Property name="text" type="java.lang.String" value="04-07-2020SanJuan"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="jButton2">
@@ -364,7 +364,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="02/06/2020Cercado"/>
+                <Property name="text" type="java.lang.String" value="02-06-2020Cercado"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel4">
@@ -376,7 +376,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="20/05/2020Huancayo"/>
+                <Property name="text" type="java.lang.String" value="20-05-2020Huancayo"/>
               </Properties>
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane4">
