--- a/src/Interfaces/Reclutador/FichaEntrevista.form
+++ b/src/Interfaces/Reclutador/FichaEntrevista.form
@@ -293,7 +293,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
-                  <Component id="jLabel1" min="-2" pref="162" max="-2" attributes="0"/>
+                  <Component id="txtNombre" min="-2" pref="162" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="246" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -302,14 +302,14 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-                  <Component id="jLabel1" min="-2" pref="43" max="-2" attributes="0"/>
+                  <Component id="txtNombre" min="-2" pref="43" max="-2" attributes="0"/>
                   <EmptySpace pref="33" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="jLabel1">
+        <Component class="javax.swing.JLabel" name="txtNombre">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="66" green="66" red="66" type="rgb"/>
