--- a/src/Interfaces/Reclutador/MenuConvocatoriaR.form
+++ b/src/Interfaces/Reclutador/MenuConvocatoriaR.form
@@ -193,7 +193,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Ver Postuntes"/>
+            <Property name="text" type="java.lang.String" value="Ver Postulantes"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
